# LUTS-pneuma-simulator

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  hpc_script.sh  pyproject.toml  run.py
.github/workflows/: documentation.yaml  tests.yml
docs/: Makefile  api.rst  conf.py  index.rst
notebooks/: discrete.ipynb  figures.ipynb  main.ipynb  movies.ipynb  pNEUMA-simulator.ipynb  results.ipynb  sampler.ipynb  sandbox.ipynb
pNeuma_simulator/: __init__.py  animations.py  batch.py  calc_dtc.py  collision_exception.py  collisions.py  confidence_interval.py  decay.py  ellipses.py  identify.py  infront.py  initialization.py  main.py  math_utils.py  navigate.py  newton_iteration.py  params.py  percolate.py  poissondisc.py  probabilities.py  projection.py  results.py  run.py  shadowcasting.py  simulate.py  target.py  zipdir.py
pNeuma_simulator/contact_distance/: __init__.py  contact_distance.py
pNeuma_simulator/dca/: __init__.py
pNeuma_simulator/gang/: __init__.py  collision.py  collisions.py  navigate.py  navigation.py  neighborhood.py  particle.py
pNeuma_simulator/initialization/: __init__.py  equilibrium.py  initialization.py  poissondisc.py  synthetic_fd.py
pNeuma_simulator/notebooks/: pNEUMA-simulator.ipynb
pNeuma_simulator/shadowcasting/: __init__.py  fov.py  quadrant.py  row.py  shadowcasting.py
pNeuma_simulator/utils/: __init__.py  decay.py  direction.py  egress.py  radial.py  tangent_dist.py  target.py  truncated_rvs.py  utils.py
